--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -22,7 +22,7 @@
             <div class="card h-100 shadow-sm border-0 hover-shadow">
                 <div class="card-body">
                     <h5 class="card-title text-primary mb-3">
-                         <i class="fa-solid fa-file-circle-check"></i> Examens
+                         <i class="fa-solid fa-file-circle-check"></i> Quiz
                     </h5>
                     <p class="card-text text-muted">Configurer les paramètres de l'application</p>
                     <a href="{{ url_for('admin.gestion_examens') }}" class="btn btn-primary mt-3">Accéder</a>
