--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -43,7 +43,7 @@
                     <i class="fa-solid fa-users"></i> Utilisateurs
                 </a>
                 <a href="{{ url_for('admin.gestion_examens') }}">
-                    <i class="fa-solid fa-file-circle-check"></i> Examens
+                    <i class="fa-solid fa-file-circle-check"></i> Quiz
                 </a>
                 <a href="{{ url_for('admin.exam_results') }}">
                     <i class="fa-solid fa-chart-simple"></i> Résultats
