--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="mb-4 fw-bold text-dark">Bienvenue sur le tableau de bord d'administration</h1>
+    <h1>Le tableau de bord d'administration</h1>
     
     <div class="row mt-4 g-4">
         <div class="col-md-4">
